# jab3

./: .gitignore  Cargo.toml  Dockerfile  config.xml  jab.data
.github/workflows/: check-and-deploy.yml  check-and-lint.yml  deploy.yml  manual_deploy.yml
api/: Cargo.toml
api/src/: basic_types.rs  endpoints.rs  files.rs  lib.rs  params.rs  proto.rs  request.rs  response.rs
api/src/timestamp/: integer.rs  mod.rs
bot/: Cargo.toml
bot/src/: command.rs  communicator.rs  lib.rs  macros.rs  module.rs  persistence.rs
bot/src/bot/: command.rs  config.rs  mod.rs
bot/src/connector/: config.rs  mod.rs  polling.rs  webhook.rs
bot/test/: config.template.xml
modules/archivarius/: Cargo.toml
modules/archivarius/src/: archivarius.rs  guess.rs  lib.rs  message.rs  user.rs
modules/birthminder/: Cargo.toml
modules/birthminder/src/: birthminder.rs  lib.rs
modules/eden/: Cargo.toml
modules/eden/src/: endpoints.rs  lib.rs  request.rs  response.rs
modules/gigachat/: Cargo.toml
modules/gigachat/src/: endpoints.rs  lib.rs  proto.rs  request.rs  response.rs
modules/imager/: Cargo.toml
modules/imager/src/: config.rs  error.rs  imager.rs  lib.rs
src/: config.rs  main.rs
