[package]
name = "jab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
api = { path = "api" }
bot = { path = "bot" }
archivarius = { path = "modules/archivarius" }
birthminder = { path = "modules/birthminder" }
eden = { path = "modules/eden" }
gigachat = { path = "modules/gigachat" }
imager = { path = "modules/imager" }

compact_str = {version = "0.8.0-beta", features = ["serde"] }
eyre = "0.6.8"
simple_logger = "4.0.0"
log = "0.4.17"
dotenv = "0.15.0"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread", "signal"] }
serde = "1.0.179"
serde-xml-rs = "0.6.0"

