[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
derivative = "2.2.0"
derive_more = "0.99.17"
serde_with = "2.2.0"
serde = "1.0.152"
http = "0.2.9"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
serde_json = "1.0.94"
serde-aux = "4.1.2"