[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }

async-trait = "0.1.66"
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bincode = "2.0.0-rc.3"
chrono = "0.4.23"
clokwerk = "0.4.0"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
eyre = "0.6.8"
futures-util = "0.3.28"
http = "0.2.9"
insta = { version = "1.28.0", features = ["json"] }
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = "1.0.152"
serde_json = "1.0.94"
serde_with = "2.2.0"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
serde-aux = "4.1.2"
simple_logger = "4.0.0"
