[package]
name = "birthminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api" }
bot = { path = "../../bot" }

chrono = "0.4.26"
eyre = "0.6.8"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
compact_str = { version = "0.8.0-beta", features = ["serde"] }
clokwerk = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.94"
serde_with = "2.2.0"
log = "0.4.17"
derive_more = "0.99.17"
async-trait = "0.1.66"
