[package]
name = "gigachat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api" }
bot = { path = "../../bot" }

derive_more = "0.99.17"
compact_str = "0.8.0-beta"
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.4.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
tokio = "1.34.0"
async-trait = "0.1.73"
bincode = "2.0.0-rc.3"
serde_json = "1.0.94"

[dev-dependencies]
dotenv = "0.15.0"
